Admin panel style.css overflow fixes

--- a/frontend/admin/style.css
+++ b/frontend/admin/style.css
@@ -98,7 +98,8 @@ li.button.selectable {
 #record-viewer.show {
     width: 100%;
     visibility: visible;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 img.record {
